Optimized loading for SpriteBox view

--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -1,69 +1,71 @@
 <template name="spriteBox">
-	{{#with showThisPix}}
-		<!-- style hack fills hidden part of window with background color-->
-		<style type="text/css">
-			#bodyBox {
-				background-color: {{ backColor }};
-			}
-		</style>
-		
-		<div class="goNewerDoc" style="color:{{ inverseBackColor }}">
-			<span class="navButton">
-				&#x25c0;
-			</span>
-		</div>
-		<div class="goOlderDoc">
-			<span class="navButton" style="color:{{ inverseBackColor }}">
-				&#x25b6;
-			</span>
-		</div>
-		<div class="eboycopyright" style="color:{{ inverseBackColor }}" >
-			©eBoy {{ madeDate }}
-		</div>
-		<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
-		<div class="contentbackground" style="background-color: {{ backColor }}">
-			<div class="spriteBoxFull">
-				<a class="goPool">
-					<img class="fadein" src="{{ this.url }}" alt="{{ this.name }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;">
-				</a>
+	{{#if Template.subscriptionsReady}}
+		{{#with showThisPix}}
+			<!-- style hack fills hidden part of window with background color-->
+			<style type="text/css">
+				#bodyBox {
+					background-color: {{ backColor }};
+				}
+			</style>
+			
+			<div class="goNewerDoc" style="color:{{ inverseBackColor }}">
+				<span class="navButton">
+					&#x25c0;
+				</span>
 			</div>
-			<div class="docMeta" id="spriteBoxInfo" style="display: {{ isVisible }}">
-				<div class="spriteBoxInfoToggle">X</div>
-				<ol>
-					<li><span class="property">id</span>: {{ this._id }}</li>
-					<li><span class="property">name</span>: {{ this.name }}</li>
-					{{#if this.metadata.madeDate}}
-						<li><span class="property">year</span>: {{ madeDate }}</li>
-					{{/if}}
-					<li><span class="property">uploaded</span>: {{ formatDate }}</li>
-					<li><span class="property">dimensions w/h</span>: {{this.metadata.width}}<span class="unit">px</span>/{{this.metadata.height}}<span class="unit">px</span></li>
-					<li><span class="property">size</span>: {{sizeFormatted.value}}<span class="unit">{{sizeFormatted.unit}}</span></li>
-					<li><span class="property">copyright</span>: {{this.metadata.copyright}}</li>
-					
-					{{#if this.metadata.license}}
-						<li><span class="property">license</span>: {{this.metadata.license}}</li>
-					{{/if}}
+			<div class="goOlderDoc">
+				<span class="navButton" style="color:{{ inverseBackColor }}">
+					&#x25b6;
+				</span>
+			</div>
+			<div class="eboycopyright" style="color:{{ inverseBackColor }}" >
+				©eBoy {{ madeDate }}
+			</div>
+			<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
+			<div class="contentbackground" style="background-color: {{ backColor }}">
+				<div class="spriteBoxFull">
+					<a class="goPool">
+						<img class="fadein" src="{{ this.url }}" alt="{{ this.name }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;">
+					</a>
+				</div>
+				<div class="docMeta" id="spriteBoxInfo" style="display: {{ isVisible }}">
+					<div class="spriteBoxInfoToggle">X</div>
+					<ol>
+						<li><span class="property">id</span>: {{ this._id }}</li>
+						<li><span class="property">name</span>: {{ this.name }}</li>
+						{{#if this.metadata.madeDate}}
+							<li><span class="property">year</span>: {{ madeDate }}</li>
+						{{/if}}
+						<li><span class="property">uploaded</span>: {{ formatDate }}</li>
+						<li><span class="property">dimensions w/h</span>: {{this.metadata.width}}<span class="unit">px</span>/{{this.metadata.height}}<span class="unit">px</span></li>
+						<li><span class="property">size</span>: {{sizeFormatted.value}}<span class="unit">{{sizeFormatted.unit}}</span></li>
+						<li><span class="property">copyright</span>: {{this.metadata.copyright}}</li>
+						
+						{{#if this.metadata.license}}
+							<li><span class="property">license</span>: {{this.metadata.license}}</li>
+						{{/if}}
 
-					<li><span class="property">tags</span>: 
-						{{#each this.metadata.tags}}
-							<span class="tag"><a class="searchForTag">{{ this }}</a></span>
-						{{/each}}
-					</li>
-					{{#if currentUser.profile.isEditor}}
-						<li><span class="property">background-color</span>: {{ this.metadata.backColor }}</li>
-						<li><span class="property">boxsize</span>: {{ scaledSprite.boxsize }}<span class="unit">px</span></li>
-						<li><span class="property">window w/h</span>: {{ scaledSprite.widthWindow }}<span class="unit">px</span>/{{ scaledSprite.heightWindow }}<span class="unit">px</span></li>
-						<li><span class="property">scaledSprite w/h</span>: {{ scaledSprite.width }}<span class="unit">px</span>/{{ scaledSprite.height	}}<span class="unit">px</span></li>
-						<li><span class="property">scaledSprite-scaleFactor</span>: {{ scaledSprite.scaleFactor }}×</li>
-						<li><span class="property">window-devicePixelRatio</span>: {{ devicePixelRatio }} </li>
-						<li><span class="property">scaledSprite-Device w/h</span>: {{ scaledSprite.widthDevice }}<span class="unit">px</span>/{{ scaledSprite.heightDevice }}<span class="unit">px</span></li>
-						<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ 	scaledSprite.scaleFactorDevice }}×</li>
-						<li><span class="property">uploadedBy.id</span>: {{this.metadata.uploadedBy.id}}</li>
-						<li><span class="property">uploadedBy.username</span>: {{this.metadata.uploadedBy.username}}</li>
-						<li><span class="property">users.username</span>: {{ showThisUserName }}</li>
-					{{/if}}
-				</ol>
+						<li><span class="property">tags</span>: 
+							{{#each this.metadata.tags}}
+								<span class="tag"><a class="searchForTag">{{ this }}</a></span>
+							{{/each}}
+						</li>
+						{{#if currentUser.profile.isEditor}}
+							<li><span class="property">background-color</span>: {{ this.metadata.backColor }}</li>
+							<li><span class="property">boxsize</span>: {{ scaledSprite.boxsize }}<span class="unit">px</span></li>
+							<li><span class="property">window w/h</span>: {{ scaledSprite.widthWindow }}<span class="unit">px</span>/{{ scaledSprite.heightWindow }}<span class="unit">px</span></li>
+							<li><span class="property">scaledSprite w/h</span>: {{ scaledSprite.width }}<span class="unit">px</span>/{{ scaledSprite.height	}}<span class="unit">px</span></li>
+							<li><span class="property">scaledSprite-scaleFactor</span>: {{ scaledSprite.scaleFactor }}×</li>
+							<li><span class="property">window-devicePixelRatio</span>: {{ devicePixelRatio }} </li>
+							<li><span class="property">scaledSprite-Device w/h</span>: {{ scaledSprite.widthDevice }}<span class="unit">px</span>/{{ scaledSprite.heightDevice }}<span class="unit">px</span></li>
+							<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ 	scaledSprite.scaleFactorDevice }}×</li>
+							<li><span class="property">uploadedBy.id</span>: {{this.metadata.uploadedBy.id}}</li>
+							<li><span class="property">uploadedBy.username</span>: {{this.metadata.uploadedBy.username}}</li>
+							<li><span class="property">users.username</span>: {{ showThisUserName }}</li>
+						{{/if}}
+					</ol>
+				</div>
 			</div>
-		</div>
-	{{/with}}
+		{{/with}}
+	{{/if}}
 </template>
