Fixed search for tag on SpriteBox
and some more ES2015 conversion

--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -67,5 +67,11 @@
 				</div>
 			</div>
 		{{/with}}
+	{{else}}
+		<style type="text/css">
+			#bodyBox {
+				background-color: {{ backColorInBetween }};
+			}
+		</style>
 	{{/if}}
 </template>
