--- a/client/templates/poolHeader.html
+++ b/client/templates/poolHeader.html
@@ -2,7 +2,7 @@
 	<div class="topnav">
 		<div class="header">
 			<span class="headline">
-				<a class="dblogo" onclick="">{{ name }}</a>
+				<a href="{{ toHomePath }}" class="dblogo">{{ name }}</a>
 			</span>
 			{{> newSearchPool}}
 		</div>
