SpriteBox to pool is now proper href link

--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -24,7 +24,7 @@
 			<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
 			<div class="contentbackground" style="background-color: {{ backColor }}">
 				<div class="spriteBoxFull">
-					<a class="goPool">
+					<a href="{{ toPoolPath }}" class="goPool">
 						<img class="fadein" src="{{ this.url }}" alt="{{ this.name }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;">
 					</a>
 				</div>
