--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -62,31 +62,31 @@
 				</div>
 
 				<div class="editLink">
-					<div><label class="property">label</label>:
+					<div><label class="property">link</label>:
 						<input
 							type="text"
 							name="linkLabel"
-							value="{{ showLinkLabel }}"
+							placeholder="label"
 							id="editLinkLabel"
 							maxlength="24"
 							size="38"
 						>
 					</div>
-					<div><label class="property">name</label>:
+					<div><label class="property">link</label>:
 						<input
 							type="text"
 							name="linkName"
-							value="{{ showLinkName }}"
+							placeholder="name"
 							id="editLinkName"
 							maxlength="26"
 							size="39"
 						>
 					</div>
-					<div><label class="property">url</label>:
+					<div><label class="property">link</label>:
 						<input
 							type="text"
 							name="linkURL"
-							value="{{ showLinkURL }}"
+							placeholder="url"
 							id="editLinkURL"
 							maxlength="256"
 							size="40"
@@ -129,16 +129,16 @@
 					{{#if showThisUserName }}
 						<li><span class="property">users.username</span>: {{ showThisUserName }}</li>
 					{{/if}}
-					{{#if showLinkLabel }}
-					<li><span class="property">collection.links</span>:
-						<span class="removelink">(×)</span>{{ showLinkLabel }}:
-						{{#if showLinkURL }}
-							<a href="{{ showLinkURL }}">{{ showLinkName }}</a>
-						{{else}}
-							{{ showLinkName }}
-						{{/if}}
-					</li>
-					{{/if}}
+					{{#each showLinks}}
+						<li><span class="property">collection.links</span>:
+							<span class="removelink">(×)</span>{{ this.label }}:
+							{{#if this.url }}
+								<a href="{{ this.url }}">{{ this.name }}</a>
+							{{else}}
+								{{ this.name }}
+							{{/if}}
+						</li>
+					{{/each}}
 				</ol>
 			</div>
 		{{/if}}
