tags page layout, links, etc.
– Some CSS for the tags page
– tags on the tags page are now linked
– Editor menu changed to href links (making it possible to open them in
a new window with alt-click).

--- a/client/style.less
+++ b/client/style.less
@@ -609,3 +609,29 @@ img {
 		text-align: center;
 	}
 }
+
+#tagContainer {
+	padding: 16px 0 0 0;
+	ol {
+		color: @almostBlack;
+		margin: 0;
+		padding: 12px 12px 18px 12px;
+		li {
+			list-style-type: none;
+		}
+		a{
+			text-decoration: none;
+			color: @almostBlack;
+		}
+		a:hover{
+			background-color: @editorColor;
+			color: @editorBackColor;
+		}
+		.tag:after {
+			content: ','
+		}
+		.tag:last-of-type:after {
+			content:''
+		}
+	}
+}
