Tag count on tags page

--- a/client/style.less
+++ b/client/style.less
@@ -613,6 +613,10 @@ img {
 #tagContainer {
 	padding: 16px 0 0 0;
 	ol {
+		strong {
+			color: @navBarText;
+			font-weight: normal;
+		}
 		color: @almostBlack;
 		margin: 0;
 		padding: 12px 12px 18px 12px;
