--- a/client/templates/tags.html
+++ b/client/templates/tags.html
@@ -1,9 +1,8 @@
 <template name="tags">
 	<div id="tagContainer">
 		<ol>
-			{{#each showTagCloud }}
+			<strong>{{tagsQuantity}} tags:</strong> {{#each showTagCloud }}
 				<span class="tag"><a href="{{ toTagPath }}">{{ this }}</a></span>
-				<!-- <span class="tag"><a class="searchForTag" href="">{{ this }}</a></span> -->
 			{{/each}}
 		</ol>
 	</div>
