Fixed editing the license on docEdit

--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -54,7 +54,7 @@
 							type="text"
 							name="license"
 							value="{{ this.metadata.license }}"
-							id="editLicense"
+							class="editLicense"
 							maxlength="24"
 							size="17"
 						>
