Keyboard shortcut 'i' toggles info boxes and editor menu

--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -68,7 +68,9 @@
 							<li><span class="property">window-devicePixelRatio</span>: {{ devicePixelRatio }} </li>
 							<li><span class="property">scaledSprite-Device w/h</span>: {{ scaledSprite.widthDevice }}<span class="unit">px</span>/{{ scaledSprite.heightDevice }}<span class="unit">px</span></li>
 							<li><span class="property">scaledSprite-scaleFactorDevice</span>: {{ 	scaledSprite.scaleFactorDevice }}×</li>
-							<li><span class="property">uploadedBy.id</span>: {{this.metadata.uploadedBy.id}}</li>
+							{{#if this.metadata.uploadedBy.id}}
+								<li><span class="property">uploadedBy.id</span>: {{this.metadata.uploadedBy.id}}</li>
+							{{/if}}
 							{{#if this.metadata.uploadedBy.username}}
 								<li><span class="property">uploadedBy.username</span>: {{this.metadata.uploadedBy.username}}</li>
 							{{/if}}
