--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -104,7 +104,9 @@
 					<li><span class="property">metadata.height</span>: {{ this.metadata.height }}<span class="unit">px</span></li>
 					<li><span class="property">size</span>: {{sizeFormatted.value}}<span class="unit">{{ sizeFormatted.unit }}</span></li>
 					<li><span class="property">metadata.copyright</span>: {{ this.metadata.copyright }}</li>
-					<li><span class="property">metadata.license</span>: {{ this.metadata.license }}</li>
+					{{#if this.metadata.license}}
+						<li><span class="property">metadata.license</span>: {{ this.metadata.license }}</li>
+					{{/if}}
 					<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
 					<li><span class="property">metadata.fullframe</span>:
 						{{#if this.metadata.fullframe}}
@@ -122,7 +124,9 @@
 					{{#if madeDateGMT.iso }}
 						<li><span class="property">metadata.madeDate</span>: {{ madeDateGMT.iso }}</li>
 					{{/if}}
-					<li><span class="property">uploadedBy.id</span>: {{ this.metadata.uploadedBy.id }}</li>
+					{{#if this.metadata.uploadedBy.id}}
+						<li><span class="property">uploadedBy.id</span>: {{ this.metadata.uploadedBy.id }}</li>
+					{{/if}}
 					{{#if this.metadata.uploadedBy.username }}
 						<li><span class="property">uploadedBy.username</span>: {{ this.metadata.uploadedBy.username }}</li>
 					{{/if}}
