Improved interface for Editor
–linkLabel and linkURL are only shown if there’s input on linkName
–new collapse icon (dots, dot)
–code cleanups

--- a/client/style.less
+++ b/client/style.less
@@ -458,8 +458,8 @@ img {
 	}
 	.editLink {
 		margin: 0;
-		padding: 12px 12px;
-		border-bottom: @editorBorderColor;
+		padding: 0px;
+		font-size: 18px;
 		input[type=text] {
 			margin: 0;
 			padding: 2px;
@@ -468,7 +468,6 @@ img {
 			font-size: inherit;
 			color: inherit;
 			background-color: inherit;
-			// background-color: gray;
 		}
 	}
 	.submitLinkButton {
@@ -476,12 +475,6 @@ img {
 			color: @editorBackColor;
 			background-color: @editorColor;
 		}
-		// text-align: right;
-		// padding: 0 3px;
-		// color: @editorColor;
-		// background-color: @editorBackColor;
-		// border: 1px @editorColor solid;
-		// border-radius: 3px;
 	}
 
 	ol {
