--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -29,7 +29,7 @@
 				{{/each}}
 				{{this.metadata.copyright}} {{ madeDate }}
 			</div>
-			<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">^</div>
+			<div class="spriteBoxInfoToggle" style="color:{{ inverseBackColor }}">...</div>
 			<div class="contentbackground" style="background-color: {{ backColor }}">
 				<div class="spriteBoxFull">
 					<a href="{{ toPoolPath }}" class="goPool">
@@ -37,7 +37,7 @@
 					</a>
 				</div>
 				<div class="docMeta" id="spriteBoxInfo" style="display: {{ isVisible }}">
-					<div class="spriteBoxInfoToggle">X</div>
+					<div class="spriteBoxInfoToggle">.</div>
 					<ol>
 						<li><span class="property">id</span>: {{ this._id }}</li>
 						<li><span class="property">name</span>: {{ this.name }}</li>
